--- a/pytest.ini
+++ b/pytest.ini
@@ -2,10 +2,7 @@
 description-file = README.md
 
 [pytest]
-python_paths = scripts
 testpaths = tests
-addopts = --pep8 --flakes --verbose --durations=10 --color=yes
-pep8maxlinelength=100
+addopts = --flakes --verbose --durations=10 --color=yes
 markers =
-    pep8: pep8 style check
     flakes: pyflakes style check
